--- a/etc/minigreen.yml
+++ b/etc/minigreen.yml
@@ -601,7 +601,7 @@ buildvariants:
   tasks:
   - name: compile_all_run_unittests_TG
   # - name: server_discovery_and_monitoring_json_test_TG
-  # - name: jsCore
+   - name: jsCore
   # - name: jsCore_txns
 
 
